Add code authors to cross filters.  Matt Legendre wants to be able to multi-select code authors

--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,12 @@
 </div>
 
 <div class="row">
+
+    <div id="runtime-chart">
+        <strong>Runtime</strong>
+        <a class="reset" href="javascript:runtimeChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+    </div>
+
     <div id="gain-loss-chart">
         <strong>Days by Gain/Loss</strong>
         <a class="reset" href="javascript:gainOrLossChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
@@ -50,7 +56,7 @@
     </div>
 
     <div id="day-of-week-chart">
-        <strong>Day of Week</strong>
+        <strong>Code Author</strong>
         <a class="reset" href="javascript:dayOfWeekChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
 
         <div class="clearfix"></div>
@@ -95,9 +101,6 @@
 
 <div class="clearfix"></div>
 
-<a href="https://github.com/dc-js/dc.js"><img style="position: absolute; top: 0; right: 0; border: 0;"
-                                                  src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
-                                                  alt="Fork me on GitHub"></a>
 </div>
 
 </div>
