--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>dc.js - Dimensional Charting Javascript Library</title>
+    <title>CrossFilter</title>
+    <!-- dc.js - Dimensional Charting Javascript Library -->
 
     <meta charset="UTF-8">
 
