Integrate chavez spot data into visualization.

--- a/web/index.html
+++ b/web/index.html
@@ -111,6 +111,7 @@
 <script type="text/javascript" src="js/dc.js"></script>
 
 <script type="text/javascript" src="stock.js"></script>
+<script src="js/chavez-spot.js"></script>
 
 </body>
 </html>
