Bubble chart, refactor to make it easier to instance.

--- a/web/index.html
+++ b/web/index.html
@@ -26,18 +26,7 @@
 
 
 <div class="row">
-    <div id="yearly-bubble-chart" class="dc-chart">
-        <strong>Yearly Performance</strong> (radius: fluctuation/index ratio, color: gain/loss)
-        <a class="reset" href="javascript:yearlyBubbleChart.filterAll();dc.redrawAll();"
-           style="display: none;">reset</a>
 
-        <div class="clearfix"></div>
-    </div>
-
-    <div id="runtime-chart">
-        <strong>Runtime</strong>
-        <a class="reset" href="javascript:ST.RuntimeChart.inst();" style="display: none;">reset</a>
-    </div>
 
     <div id="gain-loss-chart">
         <strong>Days by Gain/Loss</strong>
@@ -105,6 +94,7 @@
 <script type="text/javascript" src="js/dc.js"></script>
 
 <script src="js/RuntimeChart.js"></script>
+<script src="js/BubbleChart.js"></script>
 <script type="text/javascript" src="stock.js"></script>
 <script src="js/chavez-spot.js"></script>
 
