--- a/web/index.html
+++ b/web/index.html
@@ -24,24 +24,6 @@
 
 <div class="container">
 
-
-<div class="row">
-
-
-    <div id="gain-loss-chart">
-        <strong>Days by Gain/Loss</strong>
-        <a class="reset" href="javascript:gainOrLossChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-
-        <div class="clearfix"></div>
-    </div>
-
-    <div id="quarter-chart">
-        <strong>Quarters</strong>
-        <a class="reset" href="javascript:quarterChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-
-        <div class="clearfix"></div>
-    </div>
-
     <div id="day-of-week-chart">
         <strong>Code Author</strong>
         <a class="reset" href="javascript:dayOfWeekChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
@@ -49,40 +31,35 @@
         <div class="clearfix"></div>
     </div>
 
-    <div id="fluctuation-chart">
-        <strong>Days by Fluctuation(%)</strong>
-        <span class="reset" style="display: none;">range: <span class="filter"></span></span>
-        <a class="reset" href="javascript:fluctuationChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
 
-        <div class="clearfix"></div>
-    </div>
+    <div class="row">
 
-    <div id="monthly-move-chart">
-        <strong>Monthly Index Abs Move & Volume/500,000 Chart</strong>
-        <span class="reset" style="display: none;">range: <span class="filter"></span></span>
-        <a class="reset" href="javascript:moveChart.filterAll();volumeChart.filterAll();dc.redrawAll();"
-           style="display: none;">reset</a>
+        <div id="monthly-move-chart">
+            <strong>Monthly Index Abs Move & Volume/500,000 Chart</strong>
+            <span class="reset" style="display: none;">range: <span class="filter"></span></span>
+            <a class="reset" href="javascript:moveChart.filterAll();volumeChart.filterAll();dc.redrawAll();"
+               style="display: none;">reset</a>
 
-        <div class="clearfix"></div>
-    </div>
-
-    <div id="monthly-volume-chart">
-    </div>
-    <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p>
-</div>
-
-<div class="row">
-    <div>
-        <div class="dc-data-count">
-            <span class="filter-count"></span> selected out of <span class="total-count"></span> records | <a
-                href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+            <div class="clearfix"></div>
         </div>
-    </div>
-    <table class="table table-hover dc-data-table">
-    </table>
-</div>
 
-<div class="clearfix"></div>
+        <div id="monthly-volume-chart">
+        </div>
+        <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p>
+    </div>
+
+    <div class="row">
+        <div>
+            <div class="dc-data-count">
+                <span class="filter-count"></span> selected out of <span class="total-count"></span> records | <a
+                    href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+            </div>
+        </div>
+        <table class="table table-hover dc-data-table">
+        </table>
+    </div>
+
+    <div class="clearfix"></div>
 
 </div>
 
@@ -95,6 +72,7 @@
 
 <script src="js/RuntimeChart.js"></script>
 <script src="js/BubbleChart.js"></script>
+<script src="js/PieChart.js"></script>
 <script type="text/javascript" src="stock.js"></script>
 <script src="js/chavez-spot.js"></script>
 
