--- a/web/index_backup.html
+++ b/web/index_backup.html
@@ -173,7 +173,7 @@
 <script type="text/javascript" src="js/crossfilter.js"></script>
 <script type="text/javascript" src="js/dc.js"></script>
 
-<script type="text/javascript" src="stock.js"></script>
+<script type="text/javascript" src="ChartCollection.js"></script>
 
 <script type="text/javascript">
     var _gaq = _gaq || [];
