--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
     <div class="row">
 
         <div id="monthly-move-chart">
-            <strong>Disk IO Volume</strong>
+            <strong>Runtime total + Runtime Average</strong>
             <span class="reset" style="display: none;">range: <span class="filter"></span></span>
             <a class="reset" href="javascript:moveChart.filterAll();volumeChart.filterAll();dc.redrawAll();"
                style="display: none;">reset</a>
