Deployment work for static deploy.  Include script navigate.js as a script include.

--- a/ravel/index.html
+++ b/ravel/index.html
@@ -7,10 +7,11 @@
 
   <link rel="stylesheet" type="text/css" href="ravel.css" />
 
-  <script src="//d3js.org/d3.v4.min.js"></script>
-  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="jslib/d3.v4.min.js"></script>
+  <script src="jslib/jquery-1.11.0.min.js"></script>
   <script src="jslib/split.js"></script>
 
+  <script src="data/navigate.js"></script>
   <script src="jslib/ravel.js"></script>
   <script src="jslib/ravelView.js"></script>
   <script src="jslib/stepView.js"></script>
