--- a/web/index.html
+++ b/web/index.html
@@ -65,16 +65,16 @@
 
 </div>
 
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/d3.js"></script>
 <script type="text/javascript" src="js/crossfilter.js"></script>
 <script type="text/javascript" src="js/dc.js"></script>
 
+<script src="js/chavez-spot.js"></script>
 <script src="js/RuntimeChart.js"></script>
 <script src="js/BubbleChart.js"></script>
 <script src="js/PieChart.js"></script>
 <script type="text/javascript" src="ChartCollection.js"></script>
-<script src="js/chavez-spot.js"></script>
 
 </body>
 </html>
