--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
 
 <div class="container">
 <div id="day-of-week-chart">
-    <strong>Code Author</strong>
+    <strong>User</strong>
     <a class="reset" href="javascript:dayOfWeekChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
 
     <div class="clearfix"></div>
