a bunch of modifications for the report, inlucing avg figure of merit compute Lateness model, etc.

--- a/ravel/index.html
+++ b/ravel/index.html
@@ -17,6 +17,7 @@
   <script src="jslib/stepView.js"></script>
   <script src="jslib/physicalView.js"></script>
   <script src="jslib/ColorLatenessModel.js"></script>
+  <script src="jslib/ComputeLatenessModel.js"></script>
 
 </head>
 
