significant linechart refactor, to allow for us to use it in a data dependent manner

--- a/web/index.html
+++ b/web/index.html
@@ -34,17 +34,6 @@
 
     <div class="row">
 
-        <div id="monthly-move-chart">
-            <strong>Runtime total + Runtime Average</strong>
-            <span class="reset" style="display: none;">range: <span class="filter"></span></span>
-            <a class="reset" href="javascript:moveChart.filterAll();volumeChart.filterAll();dc.redrawAll();"
-               style="display: none;">reset</a>
-
-            <div class="clearfix"></div>
-        </div>
-
-        <div id="monthly-volume-chart">
-        </div>
         <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p>
     </div>
 
@@ -74,6 +63,7 @@
 <script src="js/RuntimeChart.js"></script>
 <script src="js/BubbleChart.js"></script>
 <script src="js/PieChart.js"></script>
+<script src="js/LineChart.js"></script>
 <script type="text/javascript" src="ChartCollection.js"></script>
 
 </body>
