--- a/web/index.html
+++ b/web/index.html
@@ -23,34 +23,30 @@
 <body>
 
 <div class="container">
-<div id="day-of-week-chart">
-    <strong>User</strong>
-    <a class="reset" href="javascript:dayOfWeekChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
 
-    <div class="clearfix"></div>
-</div>
+    <div class="left_side"></div>
 
-<div class="inner_container">
+    <div class="inner_container">
 
-    <div class="row">
+        <div class="row">
 
-        <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p>
-    </div>
-
-    <div class="row">
-        <div>
-            <div class="dc-data-count">
-                <span class="filter-count"></span> selected out of <span class="total-count"></span> records | <a
-                    href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
-            </div>
+            <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p>
         </div>
-        <table class="table table-hover dc-data-table">
-        </table>
+
+        <div class="row">
+            <div>
+                <div class="dc-data-count">
+                    <span class="filter-count"></span> selected out of <span class="total-count"></span> records | <a
+                        href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+                </div>
+            </div>
+            <table class="table table-hover dc-data-table">
+            </table>
+        </div>
+
+        <div class="clearfix"></div>
+
     </div>
-
-    <div class="clearfix"></div>
-
-</div>
 
 </div>
 
@@ -64,6 +60,8 @@
 <script src="js/BubbleChart.js"></script>
 <script src="js/PieChart.js"></script>
 <script src="js/LineChart.js"></script>
+<script src="js/HorizontalBarChart.js"></script>
+
 <script type="text/javascript" src="ChartCollection.js"></script>
 
 </body>
