--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>CrossFilter</title>
+    <title>SPOT 2</title>
     <!-- dc.js - Dimensional Charting Javascript Library -->
 
     <meta charset="UTF-8">
