--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
 
         <div class="row">
 
-            <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p>
+            <!-- <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p> -->
         </div>
 
         <div class="row">
@@ -56,7 +56,7 @@
 <script type="text/javascript" src="js/dc.js"></script>
 
 <script src="js/chavez-spot.js"></script>
-<script src="js/RuntimeChart.js"></script>
+<script src="js/BarChart.js"></script>
 <script src="js/BubbleChart.js"></script>
 <script src="js/PieChart.js"></script>
 <script src="js/LineChart.js"></script>
