--- a/web/index.html
+++ b/web/index.html
@@ -59,8 +59,12 @@
 <script src="js/BarChart.js"></script>
 <script src="js/BubbleChart.js"></script>
 <script src="js/PieChart.js"></script>
+<script src="js/BasicLineChart.js"></script>
 <script src="js/LineChart.js"></script>
 <script src="js/HorizontalBarChart.js"></script>
+<script src="js/CallSpot.js"></script>
+<script src="js/LayoutAugmenterModel.js"></script>
+<script src="js/ReturnedDataStub.js"></script>
 
 <script type="text/javascript" src="ChartCollection.js"></script>
 
