refactor to leftHorizontal bar chart

--- a/web/index.html
+++ b/web/index.html
@@ -61,7 +61,7 @@
 <script src="js/PieChart.js"></script>
 <script src="js/BasicLineChart.js"></script>
 <script src="js/LineChart.js"></script>
-<script src="js/HorizontalBarChart.js"></script>
+<script src="js/LeftHorizontalBarChart.js"></script>
 <script src="js/CallSpot.js"></script>
 <script src="js/LayoutAugmenterModel.js"></script>
 <script src="js/ReturnedDataStub.js"></script>
