--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,10 @@
 
     <div class="inner_container">
 
+        <div class="using_file">
+            Using file: <span class="txt"></span>
+        </div>
+
         <div class="row">
 
             <!-- <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p> -->
