--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,13 @@
     <div class="inner_container">
 
         <div class="using_file">
-            Using file: <span class="txt"></span>
+            <div class="help_icon">?</div>
+            <div class="help_body">
+                Using file: <span class="txt"></span>
+                <br>Using max: <span class="max"></span>
+                <br>You can specify the <b>s</b>pot <b>f</b>ile with sf= in the url bar.
+                <br>You can specify the <b>max</b> with max= in the url bar.
+            </div>
         </div>
 
         <div class="row">
