Add State manager.

--- a/web/index.html
+++ b/web/index.html
@@ -75,6 +75,7 @@
 <script src="js/CallSpot.js"></script>
 <script src="js/LayoutAugmenterModel.js"></script>
 <script src="js/ReturnedDataStub.js"></script>
+<script src="js/UrlStateManager.js"></script>
 
 <script type="text/javascript" src="ChartCollection.js"></script>
 
