--- a/web/index.html
+++ b/web/index.html
@@ -22,20 +22,14 @@
 </head>
 <body>
 
-<div class="container">
+<div id="one_app" class="container">
 
     <div class="left_side"></div>
 
     <div class="inner_container">
 
-        <div class="using_file">
-            <div class="help_icon">?</div>
-            <div class="help_body">
-                Using file: <span class="txt"></span>
-                <br>Using max: <span class="max"></span>
-                <br>You can specify the <b>s</b>pot <b>f</b>ile with sf= in the url bar.
-                <br>You can specify the <b>max</b> with max= in the url bar.
-            </div>
+        <div>
+            <button-counter></button-counter>
         </div>
 
         <div class="row">
@@ -61,6 +55,8 @@
 </div>
 
 <script src="js/jquery-1.11.0.min.js"></script>
+<script src="js/vue.js"></script>
+
 <script type="text/javascript" src="js/d3.js"></script>
 <script type="text/javascript" src="js/crossfilter.js"></script>
 <script type="text/javascript" src="js/dc.js"></script>
