help icon separation

--- a/web/index.html
+++ b/web/index.html
@@ -22,13 +22,13 @@
 </head>
 <body>
 
-<div id="one_app" class="container">
+<div class="container">
 
     <div class="left_side"></div>
 
     <div class="inner_container">
 
-        <div>
+        <div id="help_icon">
             <button-counter></button-counter>
         </div>
 
