--- a/web/index.html
+++ b/web/index.html
@@ -29,11 +29,10 @@
     <div class="inner_container">
 
         <div id="help_icon">
-            <button-counter></button-counter>
+            <help-section></help-section>
         </div>
 
-        <div class="row">
-
+        <div class="row" id="main_charts">
             <!-- <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p> -->
         </div>
 
