load filter refactor.  utility module refactor.  update URL parameters and read url parameters.  pass chart type to urlstateManager to be able to construct new url, actually make the new url and place on the url bar, etc.

--- a/web/index.html
+++ b/web/index.html
@@ -63,6 +63,7 @@
 <script src="js/chavez-spot.js"></script>
 <script src="js/BarChart.js"></script>
 <script src="js/BubbleChart.js"></script>
+<script src="js/Utility.js"></script>
 <script src="js/PieChart.js"></script>
 <script src="js/BasicLineChart.js"></script>
 <script src="js/LineChart.js"></script>
