--- a/sankey/index.html
+++ b/sankey/index.html
@@ -12,6 +12,9 @@
         <sankey-diagram :run-data='myInputData' />
     </div>
 
+    <script src="../web/js/jquery-1.11.0.min.js"></script>
+    <script src="../web/js/Utility.js"></script>
     <script src="main.js"></script>
+
 </body>
 </html>
