--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,12 @@
 </head>
 <body>
 
-<div class="container">
+<script src="js/jquery-1.11.0.min.js"></script>
+<script src="js/vue.js"></script>
+<script src="js/run-table-component.js"></script>
+
+
+<div class="container" id="app">
 
     <div class="left_side"></div>
 
@@ -35,6 +40,8 @@
         <div class="row" id="main_charts">
             <!-- <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p> -->
         </div>
+
+        <run-table-component></run-table-component>
 
         <div class="row">
             <div>
@@ -53,8 +60,6 @@
 
 </div>
 
-<script src="js/jquery-1.11.0.min.js"></script>
-<script src="js/vue.js"></script>
 
 <script type="text/javascript" src="js/d3.js"></script>
 <script type="text/javascript" src="js/crossfilter.js"></script>
