Make nice data code taht allows for nice data that looks good on power points.  2. integrated Vue into ravel page.  3. integrated callSpot into ravel page.

--- a/web/index.html
+++ b/web/index.html
@@ -79,6 +79,7 @@
 <script src="js/LayoutAugmenterModel.js"></script>
 <script src="js/ReturnedDataStub.js"></script>
 <script src="js/UrlStateManager.js"></script>
+<script src="js/MakeNiceData.js"></script>
 
 <script type="text/javascript" src="ChartCollection.js"></script>
 
