--- a/ravel/index.html
+++ b/ravel/index.html
@@ -7,9 +7,13 @@
 
   <link rel="stylesheet" type="text/css" href="ravel.css" />
 
+  <script src="../web/js/vue.js"></script>
   <script src="jslib/d3.v4.min.js"></script>
   <script src="jslib/jquery-1.11.0.min.js"></script>
   <script src="jslib/split.js"></script>
+
+  <script src="../web/js/Utility.js"></script>
+  <script src="../web/js/CallSpot.js"></script>
 
   <script src="data/navigate.js"></script>
   <script src="jslib/ravel.js"></script>
@@ -23,7 +27,7 @@
 
 <body>
 
-  <div class="parent_anchor_0">
+  <div class="parent_anchor_0" id="app">
     <div class="step split split-vertical step-div"></div>
     <div class="physical split split-vertical physical-div"></div>
     <div class="overview.split split-vertical overview-div"></div>
