Create todo list plan of action.  2. Do initial refactor of CallSpot to allow it to run in any one of our sub apps.

--- a/dur_sankey/index.html
+++ b/dur_sankey/index.html
@@ -14,6 +14,10 @@
     <script src="d3-sankey.min.js"></script>
     <script src="main.js"></script>
 
+    <script src="../web/js/jquery-1.11.0.min.js"></script>
+    <script src="../web/js/Utility.js"></script>
+    <script src="../web/js/CallSpot.js"></script>
+
     <title>Hi</title>
 </head>
 <body>
