--- a/dur_sankey/index.html
+++ b/dur_sankey/index.html
@@ -18,6 +18,15 @@
     <script src="../web/js/Utility.js"></script>
     <script src="../web/js/CallSpot.js"></script>
 
+    <style>
+        .error {
+            font-size: 16px;
+            font-family: Tahoma;
+            line-height: 1.5;
+            padding: 25px;
+        }
+    </style>
+
     <title>Hi</title>
 </head>
 <body>
