--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@
             <help-section></help-section>
         </div>
 
-        <div class="row" id="main_charts">
+        <div class="row">
             <!-- <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p> -->
         </div>
 
@@ -45,7 +45,10 @@
         <run-table-component></run-table-component>
         -->
 
-        <div class="row">
+        <div class="row bottom_table">
+
+            <div class="compare_button myButton">COMPARE</div>
+
             <div>
                 <div class="dc-data-count">
                     <span class="filter-count"></span> selected out of <span class="total-count"></span> records | <a
