First pass of reductionSplicer which reduces the events and messages to a certain step index for example 0 - 100.
Former-commit-id: 96fbcbbe7264ae218cb6628b2aea1cd08f823ac0

--- a/ravel/index.html
+++ b/ravel/index.html
@@ -15,11 +15,16 @@
   <script src="../web/js/Utility.js"></script>
   <script src="../web/js/CallSpot.js"></script>
 
+  <!--
+  <script src="../ravel/data/lulesh_x8_ravel.js"></script>
   <script src="data/navigate.js"></script>
+  -->
+
   <script src="jslib/ravel.js"></script>
   <script src="jslib/ravelView.js"></script>
   <script src="jslib/stepView.js"></script>
   <script src="jslib/physicalView.js"></script>
+  <script src="jslib/ReductionSplicer.js"></script>
   <script src="jslib/ColorLatenessModel.js"></script>
   <script src="jslib/ComputeLatenessModel.js"></script>
 
