all user to specify the command that they want to run and update docs accordingly.
Former-commit-id: da14e24f695c2d8ae198b13b9d583040b01a1648

--- a/web/doc.html
+++ b/web/doc.html
@@ -75,6 +75,13 @@
             <br><br>You can specify the <b>get_rundata_url</b> with get_rundata_url= in the url bar.  The get_rundata_url tells where to make the back end call to.
 
         </p>
+
+
+        <h3>command</h3>
+        <p>
+            Typical value for command is: /usr/gapps/wf/web/spot/virtenv/bin/python /usr/gapps/wf/web/spot/spot.py
+            <br><br>You can specify the <b>command</b> with command= in the url bar.  It sends this command to the Back end, where it gets run.
+        </p>
     </div>
 
     <h2>DataSet</h2>
