--- a/web/doc.html
+++ b/web/doc.html
@@ -209,6 +209,9 @@
 
     <h2>Getting Started</h2>
     <p>
+        Here's the <a href="/web/" target="_blank">Home</a>
+    </p>
+    <p>
         If someone wanted to start playing with the this, they could leave all the default parameters and simply pass in sf=/directory/to/your/data
         You’ll need to make sure that the data is the same format as this: (/usr/gapps/spot/datasets/lulesh2small ) to begin with.
 
