error handling code
Former-commit-id: 182c934776bf6bb531ad4d8ad2ebb59c5cfa9a33

--- a/web/index.html
+++ b/web/index.html
@@ -71,14 +71,14 @@
 <script type="text/javascript" src="js/dc.js"></script>
 
 <script src="js/chavez-spot.js"></script>
-<script src="js/BarChart.js"></script>
+<script src="js/BarChart.js?a"></script>
 <script src="js/BubbleChart.js"></script>
 <script src="js/Utility.js"></script>
 <script src="js/PieChart.js"></script>
 <script src="js/BasicLineChart.js"></script>
 <script src="js/LineChart.js"></script>
 <script src="js/LeftHorizontalBarChart.js"></script>
-<script src="js/CallSpot.js"></script>
+<script src="js/CallSpot.js?a"></script>
 <script src="js/LayoutAugmenterModel.js"></script>
 <script src="js/ReturnedDataStub.js"></script>
 <script src="js/UrlStateManager.js"></script>
