error message additional info to help people along
Former-commit-id: cce8131449dfb0cbbb7a85f5c51afa588c5718ce

--- a/web/index.html
+++ b/web/index.html
@@ -78,7 +78,7 @@
 <script src="js/BasicLineChart.js"></script>
 <script src="js/LineChart.js"></script>
 <script src="js/LeftHorizontalBarChart.js"></script>
-<script src="js/CallSpot.js?afd3"></script>
+<script src="js/CallSpot.js?afd3ff"></script>
 <script src="js/LayoutAugmenterModel.js"></script>
 <script src="js/ReturnedDataStub.js"></script>
 <script src="js/UrlStateManager.js"></script>
