--- a/web/doc.html
+++ b/web/doc.html
@@ -179,7 +179,9 @@
         {
             "dimension": "Number of Regions",
             "title": "Number of Regions",
-            "viz": "BarChart"
+            "viz": "BarChart",
+			"y-label": "Num. of runs for our Figure of merit ch.",
+			"x-label": "figure x label"
         }
     ],
     "table": [
@@ -204,6 +206,9 @@
 </pre>
 
     </p>
+
+    <h3>Labels</h3>
+    <p>You can specify labels in any of the BarChart graphs, simply by adding "x-label", or "y-label"</p>
 
 
 
