--- a/dur_sankey/index.html
+++ b/dur_sankey/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="highcharts.js"></script>
     <script src="drilldown.js"></script>
     <script src="d3-hierarchy.min.js"></script>
@@ -11,12 +11,12 @@
     <script src="d3-array.min.js"></script>
     <script src="d3-shape.min.js"></script>
     <script src="d3-path.min.js"></script>
-    <script src="d3-sankey.min.js"></script>
-    <script src="main.js"></script>
+    <script src="d3-sankey.min.js"></script>-->
 
     <script src="../web/js/jquery-1.11.0.min.js"></script>
     <script src="../web/js/Utility.js"></script>
     <script src="../web/js/CallSpot.js"></script>
+    <script src="main.min.js"></script>
 
     <style>
         .error {
@@ -25,9 +25,19 @@
             line-height: 1.65;
             padding: 25px;
         }
+
+        .xAx .tick text{
+           /* transform-origin: 1px 9px; */
+           text-anchor: start;
+            transform:rotate(15deg);
+        }
+        /* path:hover {
+            transform: scale(1, 0) !important;
+        } */
     </style>
 
-    <title>Hi</title>
+
+    <title>SPOT</title>
 </head>
 <body>
     <div id="durations-chart"></div>
