compare feature document
Former-commit-id: 5210a8dbd73b783296a4fefb2bad585ca6ee3e56

--- a/web/doc.html
+++ b/web/doc.html
@@ -226,12 +226,12 @@
     </p>
 
 
-    <h2></h2>
-    <p></p>
+    <h2>last_days</h2>
+    <p>This is a URL parameter which lets you specify the last X number of days.  This was designed to be used in conjunction with exe_compare which will then execute the compare right away.</p>
 
 
-    <h2></h2>
-    <p></p>
+    <h2>Exe Compare</h2>
+    <p>if you set exe_compare=1 in the URL bar, the display will jump to the compare page dashboard.</p>
 
 
 
