Much needed Utility refactor
Former-commit-id: 8a0f410bf8836d1d655ed1e9ec6025045284633b

--- a/web/index.html
+++ b/web/index.html
@@ -83,6 +83,7 @@
 <script src="js/ReturnedDataStub.js"></script>
 <script src="js/UrlStateManager.js"></script>
 <script src="js/MakeNiceData.js"></script>
+<script src="js/Help.js"></script>
 
 <script type="text/javascript" src="ChartCollection.js"></script>
 
