Add arguments select dropdown composed from data fields for compare.
Former-commit-id: 24f203efc87cbc509d56e61468f21fdf854f756a

--- a/web/index.html
+++ b/web/index.html
@@ -47,6 +47,7 @@
 
         <div class="row bottom_table">
 
+            <div class="compare_arguments"></div>
             <div class="compare_button myButton">COMPARE</div>
 
             <div>
