Added the ability to set parameter into the URL that compare calls.  as well as the ability for get_param to run decodeURIComponent on the string values it has.  And add exe_compare to URL on final page.
Former-commit-id: eec1b3b8b12c65f1e2eb0c6f94bca00e6a5bd42c

--- a/dur_sankey/index.html
+++ b/dur_sankey/index.html
@@ -16,6 +16,7 @@
     <script src="../web/js/jquery-1.11.0.min.js"></script>
     <script src="../web/js/Utility.js"></script>
     <script src="../web/js/CallSpot.js"></script>
+    <script src="../web/js/UrlStateManager.js"></script>
     <script src="main.min.js"></script>
 
     <style>
