--- a/web/index.html
+++ b/web/index.html
@@ -85,6 +85,7 @@
 <script src="js/UrlStateManager.js"></script>
 <script src="js/MakeNiceData.js"></script>
 <script src="js/Help.js"></script>
+<script src="js/AllPallets.js"></script>
 
 <script type="text/javascript" src="ChartCollection.js"></script>
 
