--- a/web/doc.html
+++ b/web/doc.html
@@ -82,6 +82,10 @@
             Typical value for command is: /usr/gapps/wf/web/spot/virtenv/bin/python /usr/gapps/wf/web/spot/spot.py
             <br><br>You can specify the <b>command</b> with command= in the url bar.  It sends this command to the Back end, where it gets run.
         </p>
+
+        <h3>Color of charts</h3>
+        <p>You can change the color of the charts with the URL parameter <b>color</b>.  Simply set color=1 or any number between 0 and 17</p>
+
     </div>
 
     <h2>DataSet</h2>
