Add user preferences module to show checkboxes and graph names.  also some more docs.
Former-commit-id: 5ebb3bd47e6dfa649f4ff5522123a58d32dbd4b9

--- a/web/doc.html
+++ b/web/doc.html
@@ -150,6 +150,14 @@
     </p>
 
 
+    <h2>Bar Chart Bucketed vs Linear</h2>
+    <p>
+        There are 2 conditions upon which must be met for sub-integer bucketing:
+    <ul>
+        <li>At least one of the data values must be a decimal value.</li>
+        <li>The difference between the lowest value and the highest value must be below the SUB_INTEGER_LIMIT, currently set to 12.</li>
+    </ul>
+    </p>
 
 
     <h2>Layout Spec</h2>
