--- a/web/index.html
+++ b/web/index.html
@@ -64,7 +64,10 @@
 
     </div>
 
+    <user-preferences></user-preferences>
 </div>
+
+
 
 
 <script type="text/javascript" src="js/d3.js"></script>
@@ -86,6 +89,7 @@
 <script src="js/MakeNiceData.js"></script>
 <script src="js/Help.js"></script>
 <script src="js/AllPallets.js"></script>
+<script src="js/UserPreferences.js"></script>
 
 <script type="text/javascript" src="ChartCollection.js"></script>
 
