--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,11 @@
             <help-section></help-section>
         </div>
 
+        <div id="user_preferences">
+            <user-preferences></user-preferences>
+        </div>
+
+
         <div class="row">
             <!-- <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p> -->
         </div>
@@ -64,7 +69,6 @@
 
     </div>
 
-    <user-preferences></user-preferences>
 </div>
 
 
