fix main index file and remove mpi button
Former-commit-id: 79f159fa9d444ed7d6a7047ea98bc7ab1b4e5634

--- a/web/index.html
+++ b/web/index.html
@@ -22,80 +22,9 @@
 </head>
 <body>
 
-<script src="js/jquery-1.11.0.min.js"></script>
-<script src="js/vue.js"></script>
-<script src="js/run-table-component.js"></script>
-
-
-<div class="container" id="app">
-
-    <div class="left_side"></div>
-
-    <div class="inner_container">
-
-        <div id="help_icon">
-            <help-section></help-section>
-        </div>
-
-        <div id="user_preferences">
-            <user-preferences></user-preferences>
-        </div>
-
-
-        <div class="row">
-            <!-- <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p> -->
-        </div>
-
-        <!--
-        <run-table-component></run-table-component>
-        -->
-
-        <div class="row bottom_table">
-
-            <div class="compare_arguments"></div>
-            <div class="compare_button myButton">COMPARE</div>
-
-            <div>
-                <div class="dc-data-count">
-                    <span class="filter-count"></span> selected out of <span class="total-count"></span> records | <a
-                        href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
-                </div>
-            </div>
-            <table class="table table-hover dc-data-table">
-            </table>
-        </div>
-
-        <div class="clearfix"></div>
-
-    </div>
-
-</div>
-
-
-
-
-<script type="text/javascript" src="js/d3.js"></script>
-<script type="text/javascript" src="js/crossfilter.js"></script>
-<script type="text/javascript" src="js/dc.js"></script>
-
-<script src="js/chavez-spot.js"></script>
-<script src="js/BarChart.js?a"></script>
-<script src="js/BubbleChart.js"></script>
-<script src="js/Utility.js"></script>
-<script src="js/PieChart.js"></script>
-<script src="js/BasicLineChart.js"></script>
-<script src="js/LineChart.js"></script>
-<script src="js/LeftHorizontalBarChart.js"></script>
-<script src="js/CallSpot.js?afd3ff"></script>
-<script src="js/LayoutAugmenterModel.js"></script>
-<script src="js/ReturnedDataStub.js"></script>
-<script src="js/UrlStateManager.js"></script>
-<script src="js/MakeNiceData.js"></script>
-<script src="js/Help.js"></script>
-<script src="js/AllPallets.js"></script>
-<script src="js/UserPreferences.js"></script>
-
-<script type="text/javascript" src="ChartCollection.js"></script>
+You are in /web/
+<br>
+Please use <a href="../index.html">/</a>
 
 </body>
 </html>
