--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
 
 You are in /web/
 <br>
-Please use <a href="../index.html">/</a>
+Please use <a href="../index.html">the top slash /</a>
 
 </body>
 </html>
