--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
 
-        <div class="row">
+        <div class="row chart_container">
             <!-- <p class="muted pull-right" style="margin-right: 15px;">select a time range to zoom in</p> -->
         </div>
 
@@ -61,6 +61,7 @@
                         href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
                 </div>
             </div>
+
             <table class="table table-hover dc-data-table">
             </table>
         </div>
