fix reload button and launch days ago.
Former-commit-id: b038858d0086a3ad2d53960cd955adb5436ef437

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
         <div class="row bottom_table">
 
+            <div class="launch_container"></div>
             <div class="compare_arguments"></div>
             <div class="compare_button myButton">COMPARE</div>
 
