directory containing cali files update with a new Vue component to show that particular widget.  be able to get the update button event and then retrieve the path and use that to update the part of the URL that needs updating.
Former-commit-id: f37a41f5c304895d062dd628809f5f91e39935f1

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <user-preferences></user-preferences>
         </div>
 
+        <div id="file_upload">
+            <file-upload></file-upload>
+        </div>
+
 
         <div class="row chart_container">
         </div>
@@ -94,6 +98,7 @@
 <script src="web/js/MakeNiceData.js"></script>
 <script src="web/js/Help.js"></script>
 <script src="web/js/AllPallets.js"></script>
+<script src="web/js/FileUpload.js"></script>
 <script src="web/js/UserPreferences.js"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
