Hierarchical series of ajax calls split up so that each one sends no more than 10, for testing purposes
Former-commit-id: 91d110be21b54936bd0d87b89568a31782ae7283

--- a/dur_sankey/index.html
+++ b/dur_sankey/index.html
@@ -17,6 +17,7 @@
     <script src="../web/js/Utility.js"></script>
     <script src="../web/js/CallSpot.js"></script>
     <script src="../web/js/UrlStateManager.js"></script>
+    <script src="../dur_sankey/SeriesHier.js"></script>
     <script src="main.min.js"></script>
 
     <style>
