Initial HorizontalBarChart which will show the PieChart data in a horizontal manner.  Just the initial draft
Former-commit-id: 89d8caafd350ce8423d18dfc94d43c76df5e2986

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 <script src="web/js/AllPallets.js"></script>
 <script src="web/js/FileUpload.js"></script>
 <script src="web/js/UserPreferences.js"></script>
+<script src="web/js/HorizontalBarChart.js"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
