show more link at the bottom plus the functionality which increases the amount to show more and makes it cumulative.
Former-commit-id: c7138648e18907a0b4502913a22b3bcf9a8caea8

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
             </table>
         </div>
 
+        <div class="contain_show_more">
+            <a href="javascript: ST.ChartCollection.show_more();">show more</a>
+        </div>
+
         <div class="clearfix"></div>
 
     </div>
