Refactor the compare arguments such that they have their own module now.
Former-commit-id: 1aa58393b32a70455053c4fed3a671b897fa02e7

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
 <script src="web/js/chavez-spot.js"></script>
 <script src="web/js/BarChart.js?a"></script>
+<script src="web/js/CompareArguments.js"></script>
 <script src="web/js/BubbleChart.js"></script>
 <script src="web/js/Utility.js"></script>
 <script src="web/js/PieChart.js"></script>
