licencing documentation and template, make cali updates
Former-commit-id: 6609b930f51aabe1e041d6c9035b1375fbe9e168

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
 
     </div>
 
+    <a href="https://www.iconsdb.com/black-icons/planet-icon.html" class="none_here">planet icons</a>
+    <a href="https://image.flaticon.com/icons/png/512/59/59252.png" class="none_here">flaticons</a>
+    <a href="https://img.icons8.com" class="none_here">icons8</a>
+
 </div>
 
 
