make anchor rebind if we select a horizontal bar.
Former-commit-id: 9f28cc7e4ec7f595eca7ec9344e6a1b623647829

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="contain_show_more">
-            <a href="javascript: ST.ChartCollection.show_more();">show more</a>
+            <a>show more</a>
         </div>
 
         <div class="clearfix"></div>
