help fix nathans issue with null values in his client data that are not found in every cali_object
Former-commit-id: db9241c88b39e269f8b99c2d9717a6b2593f964d

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 <script type="text/javascript" src="web/js/d3.js"></script>
 <script type="text/javascript" src="web/js/crossfilter.js"></script>
 <script type="text/javascript" src="web/js/dc.js"></script>
+<script type="text/javascript" src="client.js"></script>
 
 <script src="web/js/chavez-spot.js"></script>
 <script src="web/js/BarChart.js?a"></script>
