quick fix for nathans no data /null value issue
Former-commit-id: c0e01c77bbb50d34c02262a0f53f7ba89dddcc87

--- a/client.html
+++ b/client.html
@@ -12,6 +12,11 @@
     <button onclick="setXAxis('num_regions')">Xaxis num_regions</button>
 
     <script >
+        /*
+        So first you need to addRunSetChangeListener()
+        that will be your summary callback
+        When you call setDirectory() after that it will callback your summary data
+         */
         // first set listeners:
             // you
         addRunSetChangeListener(summary => {
