--- a/index.html
+++ b/index.html
@@ -66,8 +66,13 @@
                 </div>
             </div>
 
+            <bottom-tabs id="bottom-tabs"></bottom-tabs>
+
             <table class="table table-hover dc-data-table">
             </table>
+
+            <div id="compare_bottom_outer"></div>
+
         </div>
 
         <div class="contain_show_more">
