--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
 
             <bottom-tabs id="bottom-tabs"></bottom-tabs>
 
-            <table class="table table-hover dc-data-table">
-            </table>
+            <div class="table-outer">
 
-        </div>
+                <table class="table table-hover dc-data-table">
+                </table>
 
-        <div id="compare_bottom_outer"></div>
-
-        <div class="contain_show_more">
-            <a>show more</a>
+                <div class="contain_show_more">
+                    <a>show more</a>
+                </div>
+            </div>
         </div>
 
         <div class="clearfix"></div>
@@ -88,6 +88,8 @@
     <a href="https://img.icons8.com" class="none_here">icons8</a>
 
 </div>
+
+<div id="compare_bottom_outer"></div>
 
 
 
