--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <script type="text/javascript" src="web/js/d3.js"></script>
 <script type="text/javascript" src="web/js/crossfilter.js"></script>
 <script type="text/javascript" src="web/js/dc.js"></script>
-<script type="text/javascript" src="client.js"></script>
+<script type="text/javascript" src="compare.js"></script>
 
 <script src="web/js/chavez-spot.js"></script>
 <script src="web/js/BarChart.js?a"></script>
