add test case with working jupyter/duration, Plus: refactor get_keys and compare call
Former-commit-id: 03b258d1a2bbb42fca42f4a11788f2bdb33ce6ea

--- a/test.html
+++ b/test.html
@@ -19,6 +19,10 @@
 </head>
 <body>
 
+<div>This dataset has a working duration graph/JupiterHub links.</div>
+<a href="https://lc.llnl.gov/spot/dcvis/?sf=/usr/gapps/spot/datasets/lulesh_new">https://lc.llnl.gov/spot/dcvis/?sf=/usr/gapps/spot/datasets/lulesh_new</a>
+<br><br>
+
 <div id="app">
 
     <link-rows></link-rows>
