get rid of the compare button and the drop downs that are redundant
Former-commit-id: a91e4e5c946c1fecba076503c178657f9afaeb91

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <div class="launch_container"></div>
             <div class="compare_arguments"></div>
-            <div class="compare_button myButton">COMPARE</div>
+            <!--<div class="compare_button myButton">COMPARE</div>-->
 
             <div>
                 <div class="dc-data-count">
