added title and borders to duration view
Former-commit-id: bd4cfb33bb65ce0240b56416be34dc6ca2cbf175

--- a/sankey/index.html
+++ b/sankey/index.html
@@ -15,7 +15,7 @@
                 for (const [key, val] of Object.entries(runSet.RunGlobalMeta)){
                     fileData.Globals[key] = {value: fileData.Globals[key], type: runSet.RunGlobalMeta[key].type}
                 }
-                const flags = {data: fileData.Data, meta: fileData.Globals}
+                const flags = {filename, data: fileData.Data, meta: fileData.Globals}
                 return Elm.Main.init(
                     { node: document.querySelector('main')
                     , flags
