--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 <script src="web/js/FileUpload.js"></script>
 <script src="web/js/UserPreferences.js"></script>
 <script src="web/js/HorizontalBarChart.js"></script>
+<script src="web/js/ReusableView.js"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
