--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 <script src="web/js/UserPreferences.js"></script>
 <script src="web/js/HorizontalBarChart.js"></script>
 <script src="web/js/ReusableView.js"></script>
+<script src="web/js/Environment.js"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
